<resources>
    <string name="app_name">Chequati</string>
    <string name="cheque_app">ChequeAti</string>
    <string name="open_drawer">Open</string>
    <string name="close_drawer">Close</string>
    <string name="version">App Version</string>
    <string name="version_num"> 10</string>
    <string name="developers">Developers</string>
    <string name="user_name">Username (Mobile No)</string>
    <string name="password">Password</string>
    <string name="sing_in">Sign In</string>
    <string name="sing_up">Sign Up</string>
    <string name="national_no">National NO.</string>
    <string name="first_name">1st Name</string>
    <string name="second_name">2nd Name</string>
    <string name="third_name">3rd Name</string>
    <string name="fourth_name">4th Name</string>
    <string name="date">Date</string>
    <string name="phone">Phone</string>
    <string name="phone_number">Phone Number</string>
    <string name="address">Address</string>
    <string name="e_mail">E-Mail</string>
    <string name="save">Save</string>
    <string name="editing_cheque">Editing Cheque</string>
    <string name="amount_in_words">Amount in words</string>
    <string name="main_sentence">Please scan the barcode to continue editing the check ...</string>
    <string name="enter">Enter</string>
    <string name="check_validation">Check validation!</string>
    <string name="mainpage_sentence">Please Select Your Account or Add Another Account</string>
    <string name="request">Request</string>
    <string name="editing_check">Issue Cheque</string>
    <string name="phone_no">Phone No.</string>
    <string name="order_to">Order To</string>
    <string name="company_optional">Company (optional)</string>
    <string name="notes_optional">Notes (optional)</string>
    <string name="amount">JD amount</string>
    <string name="amount_word">Amount</string>
    <string name="dinar">Dinar</string>
    <string name="phils">Fils</string>
    <string name="amount_in_word">Amount in word</string>
    <string name="check_pic">Cheque Picture</string>
    <string name="send">Send</string>
    <string name="please_scan_the_barcode_to_continue_editing_the_check">Please Scan The QR Code To Continue Issuing The Check ...</string>
    <string name="scan_barcode">Scan QR Code</string>
    <string name="have_a_problem">have a problem !</string>
    <string name="check">Check</string>
    <string name="serial_no">Serial No</string>
    <string name="log_history">Log History</string>
    <string name="status">Status</string>
    <string name="transaction_type">Transaction Type</string>
    <string name="name">Name</string>
    <string name="Notification">Notification</string>
    <string name="new_account">New Account</string>
    <string name="account_no">Account No</string>
    <string name="add">Add</string>
    <string name="cheque_writer">Cheque Issuer  </string>
    <string name="cheque_writer_">Cheque Issuer : </string>
    <string name="bank_name">Bank Name </string>
    <string name="bank_name_">Bank Name : </string>
    <string name="cheque_no_">Cheque No : </string>
    <string name="account_no_">Account No : </string>
    <string name="cheque_no">Cheque No </string>
    <string name="the_cheque_has_been_validated">The Cheque Has Been Validated</string>
    <string name="Accept">Accept</string>
    <string name="Reject">Rejected</string>
    <string name="CheckDetail">Cheque Details</string>
    <string name="customer_name">Customer Name</string>
    <string name="cashier_check">Cashier Check </string>
    <string name="firstbeneficiary">First Beneficiary</string>
    <string name="beneficiary"> Beneficiary</string>
    <string name="checkReject">Cheque Rejected</string>
    <string name="CheckAccpted">Cheque Accepted</string>
    <string name="NewCheck">New Cheque</string>
    <string name="cheque_endorsement">Giro</string>
    <string name="wallet">Wallet</string>
    <string name="ch_status">Cheque Status </string>
    <string name="chWriter">Cheque Writer :</string>
    <string name="chBf">Cheque Beneficiary :</string>
    <string name="chBf_">Cheque Beneficiary </string>
    <string name="rej">Reject</string>
    <string name="acccept">Accepted</string>
    <string name="pending">Pending</string>
    <string name="save_success">Processing</string>
    <string name="cantSave">Cannot ADD</string>
    <string name="already_exist">Account Is Already Exist !</string>
    <string name="error_in_save">Error in Adding Accounts!</string>
    <string name="success_del">Delete Successfully</string>
    <string name="del_acc_success">Account Deleted Successfully</string>
    <string name="can_del">Cannot Delete</string>
    <string name="error_del">Error In Deleting Account. !</string>
    <string name="pending_">*** Pending ***</string>
    <string name="cantsendchech">Cannot Sending Cheque !</string>
    <string name="ok">Ok</string>
    <string name="warning">WARNING</string>
    <string name="failtoSend">Fail To Send!</string>
    <string name="close">Close</string>
    <string name="Confirm">Confirm</string>
    <string name="message_forAccept">Are You Sure Want To Accept This Cheque ?</string>
    <string name="signout">Signout</string>
    <string name="profile">Profile</string>
    <string name="giro">Giro</string>
    <string name="verification">Verification</string>
    <string name="required">Required Filed</string>
    <string name="newRequest">New Request</string>
    <string name="company">Company</string>
    <string name="RequestDetail">Request Details</string>
    <string name="Dear">Dear</string>
    <string name="Request_From">Request From</string>
    <string name="ResonOfReject">Reason Of Reject</string>
    <string name="requestRejected">Request Rejected For Reason</string>
    <string name="requestRejec">Request Rejected</string>
    <string name="cashier_cheque">Cashier Cheque</string>
    <string name="handovew">Please Hand It Over :</string>
    <string name="thisusernotcheq">This Cheque Is Not Yours</string>
    <string name="SENDtOGiro">To Send This Cheque Go To Giro</string>
    <string name="cheq_acc"> CHEQUE </string>
    <string name="CHEQUE_NOT_FOR_YOU">This Cheque Is Not The Same As The Cheque You Want To Send !!!</string>
    <string name="message_reject">Are You Sure Want To Reject This Cheque?</string>
    <string name="remember_me">Remember Me</string>
    <string name="about">About</string>
    <string name="type">Type</string>
    <string name="tracking">Tracking</string>
    <string name="bank">Bank</string>
    <string name="cheque_information">Cheque Information</string>
    <string name="the_purpose_of_issuing_the_check">The Purpose Of Issuing The Check</string>
    <string name="inCh">Under The Attached Authorization Without Assuming Any Responsibility On Your Part</string>
    <string name="cheque_number_">Cheque Number</string>
    <string name="forget_password">Forget Password</string>
    <string name="continue_action_using">Continue Action using</string>
    <string name="account_type">Account Type</string>
    <string name="individual">Individual</string>
    <string name="corporate">Corporate</string>
    <string name="join_account">Joint Account</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="please_waiting">Please Waiting...</string>
    <string name="not_valid_email">Not Valid Email!</string>
    <string name="phone_less_than_10_digit">Phone Number Is Less Than 10 Digits!</string>
    <string name="national_less_than_10_digit">National Number Is Less Than 10 Digits!</string>
    <string name="please_choose_gender">Please choose gender!</string>
    <string name="please_choose_account_type">Please Choose Account Type!</string>
    <string name="resend">ReSend</string>
    <string name="cashed">Cashed</string>
    <string name="national_id">National ID</string>
    <string name="gerocheque">Accepted Giro </string>
    <string name="relation">The Relation</string>
    <string name="consanguinity">Consanguinity</string>
    <string name="Business">Business</string>
    <string name="other">Other</string>
    <string name="notforYou">You Are Not This Account Owner</string>
    <string name="customer_no">Customer No</string>
    <string name="branch_no">Branch No</string>
    <string name="currency">Currency</string>
    <string name="se_no">Se.No</string>
    <string name="check_">Check</string>
    <string name="with_a_discount_from_our_account_you_have_a_number">With A Discount From Our Account, You Have A Number:</string>
    <string name="us_personally">Us Personally</string>
    <string name="to_the_master">To Authorized Person</string>
    <string name="branch_name">Branch Name :</string>
    <string name="passport">Passport ID</string>
    <string name="beneficiary_mobile">Beneficiary Mobile</string>
    <string name="zero_digit">Enter Phone Number Without Zero At The Beginning!</string>
    <string name="lost">Lost</string>
    <string name="process">Processing</string>
    <string name="rejectedGereo">Rejected Giro</string>
    <string name="newGeroChecue">New Giro Cheque</string>
    <string name="_7xxxxxxxx">7xxxxxxxx</string>
    <string name="name_of_fourth_syllables">Full Name </string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="nationality">Nationality</string>
    <string name="id_number">National No.</string>
    <string name="national_no_length">National Number Is Less Than 10 Digits!</string>
    <string name="password_syntax">Password Must Contains At Least 6 Digits, Capital Letter, Number And Special Character</string>
    <string name="remove_zero">Enter Phone Number Without Zero At The Beginning!</string>
    <string name="phone_length">Phone Number Is Less Than 10 Digits!</string>
    <string name="password_not_matched">Passwords Not Matched</string>
    <string name="check_info_first">PLease Check Sent Information First!</string>
    <string name="mobile_already_exist">User Mobile Already Exists!</string>
    <string name="national_already_exist">National ID Already Exists!</string>
    <string name="info_not_saved">"Information Not Saved!"</string>
    <string name="id_is_not_correct">Id Number Is Not Correct!</string>
    <string name="user_not_found">User Not Found!</string>
    <string name="check_internet_connection">Please Check Internet Connection!</string>
    <string name="new_account_saved_successfully">New Account Saved Successfully</string>
    <string name="welcome">Welcome</string>
    <string name="lost_stealing">Lost / Stolen</string>
    <string name="bank_of_jordan">Bank Of Jordan</string>
    <string name="PleaseWaiting">Please Waiting...</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="typehere">Type Here</string>
    <string name="cancel">Cancel</string>
    <string name="Note">Note</string>
    <string name="CO">C/O</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="age_constrict">Your Age Is Less Than 18 Year!</string>
    <string name="mr_mrs">Mr. / Mrs</string>
    <string name="send_">Send</string>
    <string name="receive_">Receive</string>
    <string name="only_cheque">Only Cheque</string>
    <string name="range_of_cheque">Range of Cheque</string>
    <string name="uplode_lost_report">UpLode Lost Report</string>
    <string name="ex_13001_13010">Ex. 13001-13010</string>
    <string name="beneficiary_phone">Beneficiary Phone</string>
    <string name="my_cheques">My Cheques</string>
    <string name="canReceive"> You Can Receive This Cheque </string>
    <string name="chequeCashed">Cheque Cashed</string>
    <string name="chequeNotFound">Cheque Data not found</string>
    <string name="edit">Edit</string>
    <string name="isNotYour">This Cheque Is Not Yours !!!</string>
</resources>