<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable
            name="test"
            type="com.falconssoft.centerbank.viewmodel.ChequeInfoVM" />
    </data>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bank4"
        tools:context=".TrackingCheque">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:background="@color/alpha_black2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >

                <TextView
                    android:textSize="12sp"
                    android:text="@string/date"
                    android:gravity="center"
                    android:padding="5dp"
                    android:textColor="@color/white"
                    android:fontFamily="serif"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <TextView
                    android:textSize="12sp"
                    android:text="@string/beneficiary"
                    android:gravity="center"
                    android:padding="5dp"
                    android:textColor="@color/white"
                    android:fontFamily="serif"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <TextView
                    android:textSize="12sp"
                    android:text="@string/national_no"
                    android:gravity="center"
                    android:padding="5dp"
                    android:textColor="@color/white"
                    android:fontFamily="serif"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <TextView
                    android:textSize="12sp"
                    android:text="@string/phone_number"
                    android:gravity="center"
                    android:padding="5dp"
                    android:textColor="@color/white"
                    android:fontFamily="serif"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <TextView
                    android:textSize="12sp"
                    android:text="@string/transaction_type"
                    android:gravity="center"
                    android:padding="5dp"
                    android:textColor="@color/white"
                    android:fontFamily="serif"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

                <TextView
                    android:textSize="12sp"
                    android:text="@string/status"
                    android:gravity="center"
                    android:padding="5dp"
                    android:textColor="@color/white"
                    android:fontFamily="serif"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"/>

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/tracking_recyclerView"
                android:background="@color/alpha_black2"
                android:padding="5dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                />

        </LinearLayout>
    </RelativeLayout>
</layout>