<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/red"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tracking_raw_chequeNo"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:fontFamily="serif"
        android:padding="10dp"
        android:text="@string/cheque_no"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:background="@drawable/edit_bac_"
        android:orientation="vertical"
        android:layout_margin="5dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:textSize="12sp"
                android:text="@string/date"
                android:padding="5dp"
                android:textColor="@color/white"
                android:fontFamily="serif"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <TextView
                android:textSize="12sp"
                android:text="@string/beneficiary"
                android:padding="5dp"
                android:textColor="@color/white"
                android:fontFamily="serif"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <TextView
                android:textSize="12sp"
                android:text="@string/national_no"
                android:padding="5dp"
                android:textColor="@color/white"
                android:fontFamily="serif"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <TextView
                android:textSize="12sp"
                android:text="@string/phone_number"
                android:padding="5dp"
                android:textColor="@color/white"
                android:fontFamily="serif"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <TextView
                android:textSize="12sp"
                android:text="@string/transaction_type"
                android:padding="5dp"
                android:textColor="@color/white"
                android:fontFamily="serif"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <TextView
                android:textSize="12sp"
                android:text="@string/status"
                android:padding="5dp"
                android:textColor="@color/white"
                android:fontFamily="serif"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_weight="2">

            <TextView
                android:padding="5dp"
                android:textColor="@color/white"
                android:fontFamily="serif"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <TextView
                android:padding="5dp"
                android:textColor="@color/white"
                android:fontFamily="serif"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <TextView
                android:padding="5dp"
                android:textColor="@color/white"
                android:fontFamily="serif"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <TextView
                android:padding="5dp"
                android:textColor="@color/white"
                android:fontFamily="serif"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <TextView
                android:padding="5dp"
                android:textColor="@color/white"
                android:fontFamily="serif"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

            <TextView
                android:padding="5dp"
                android:textColor="@color/white"
                android:fontFamily="serif"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>