<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layoutDirection="locale"
    android:textDirection="locale"
    android:padding="20dp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/forgetPassword_tv"
        android:layout_marginVertical="20dp"
        android:textSize="20sp"
        android:fontFamily="serif"
        android:textColor="@color/red"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_touch"
        android:drawablePadding="5dp"
        android:text="@string/continue_action_using"/>

    <RadioGroup
        android:id="@+id/forgetPassword_rg"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RadioButton
            android:id="@+id/forgetPassword_email_rb"
            android:textSize="18sp"
            android:fontFamily="serif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/e_mail"/>

        <LinearLayout
            android:id="@+id/forgetPassword_email_linear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:visibility="gone"
            android:orientation="vertical">

            <EditText
                android:id="@+id/forgetPassword_email"
                android:fontFamily="serif"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               />

            <Button
                android:id="@+id/forgetPassword_email_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:fontFamily="serif"
                android:text="@string/send"
                android:background="#00FFFFFF"
                android:textColor="@color/red"
                android:textSize="18sp"
                android:textAllCaps="false" />

        </LinearLayout>

        <RadioButton
            android:id="@+id/forgetPassword_phone_rb"
            android:textSize="18sp"
            android:fontFamily="serif"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"/>

        <LinearLayout
            android:id="@+id/forgetPassword_phone_linear"
            android:layout_marginHorizontal="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/editorCheque_phone_linear"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:gravity="center">

                <com.hbb20.CountryCodePicker
                    android:id="@+id/forgetPassword_ccp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:ccp_defaultNameCode="JO"
                    app:ccp_showNameCode="false"
                    />

                <EditText
                    android:id="@+id/forgetPassword_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="serif"
                    android:textCursorDrawable="@null"
                    android:hint="@string/_7xxxxxxxx"
                    android:inputType="phone"
                    android:maxLength="9"
                    android:padding="5dp"
                    android:textColorHint="@color/light_gray"
                    android:textSize="15sp"/>
            </LinearLayout>

            <Button
                android:id="@+id/forgetPassword_phone_send"
                android:fontFamily="serif"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:textAllCaps="false"
                android:background="#00FFFFFF"
                android:textColor="@color/red"
                android:textSize="18sp"
                android:text="@string/send"/>

        </LinearLayout>
    </RadioGroup>

</LinearLayout>