<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="400dp"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"> 


    <ImageView
        android:id="@+id/imageView"
        android:layout_gravity="center"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="50dp"
        android:tint="@color/red"
        />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingHorizontal="100dp"
        android:fontFamily="serif"
        android:text="@string/the_cheque_has_been_validated"
        android:textSize="20sp"
        />

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="400dp"
        android:layout_marginTop="24dp"
        android:orientation="vertical"
       >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="serif"
                android:gravity="center"
                android:text="@string/bank_name"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/dialog_validation_bankName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:fontFamily="serif"
                android:gravity="center_vertical|left"
                android:text="Bank Of Jordan"
                android:textSize="20sp" />

            <ImageView
                android:src="@drawable/jordan_bank"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_weight="0"
                android:fontFamily="serif"
                android:text="Bank Of Jordan"
                android:textSize="16sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="serif"
                android:gravity="center"
                android:text="@string/cheque_writer"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/dialog_validation_chequeWriter"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:fontFamily="serif"
                android:gravity="center_vertical|left"
                android:text="mr ahmad ali"
                android:textAllCaps="true"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
           >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="serif"
                android:gravity="center"
                android:text="@string/cheque_no"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/dialog_validation_chequeNo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:fontFamily="serif"
                android:text="125565485"
                android:gravity="center_vertical|left"
                android:textAllCaps="true"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_margin="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="serif"
                android:gravity="center"
                android:text="@string/account_no_"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/dialog_validation_accountNo"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:fontFamily="serif"
                android:text="54654654546545"
                android:gravity="center_vertical|left"
                android:textAllCaps="true"
                android:textSize="20sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="50dp"
        android:gravity="right"
        android:orientation="horizontal"
       >

        <TextView
            android:id="@+id/dialog_validation_ok"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:gravity="right"
            android:text="@string/dialog_ok"
            android:textColor="@color/red"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/dialog_validation_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:fontFamily="serif"
            android:text="@string/dialog_cancel"
            android:textSize="20sp" />

    </LinearLayout>



</LinearLayout>